# grove

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: release-please.yml
docs/: grove.html  index.html  search.js
docs/grove/: __version__.html  directory.html
grove/: __init__.py
grove/directory/: __init__.py  create.py
grove/project/: __init__.py  jinja.py
tests/directory/: test_directory.py
tests/project/: test_resolve_template.py
