[project]
name = "grove"
version = "0.1.0"
description = "Grove CLI: générateur de projets"
authors = [{ name = "karamir", email = "karamir@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
	"python-hcl2>=4.3",
	"python-terraform>=0.10"
]

[project.scripts]
grove = "grove.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
grove = ["../etc/*"]

[pytest]
pythonpath = "."

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

